--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.1",
   "private": false,
   "engines": {
-    "node": "15.14.0*"
+    "node": "12.*"
   },
   "scripts": {
     "start": "node server.js"
